--- a/src/pages/Esystem/esystem.css
+++ b/src/pages/Esystem/esystem.css
@@ -141,39 +141,63 @@
 
 /* Berthing System */
 .berthing-system {
-  width: 400px; 
-  height: auto; 
-  margin: 0; 
-  background-color: #11101B; 
-  padding: 30px; 
-  border-radius: 10px; 
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); 
-  color: #fff; 
-  text-align: center; 
-  position: absolute; 
-  top: 90%; 
-  left: 12%; 
-  transform: translateY(-50%); 
+  width: 450px;
+  height: 400px;
+  margin: 0;
+  background-color: #11101B;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  top: 90%;
+  left: 12%;
+  transform: translateY(-50%);
   z-index: 2;
+  overflow: hidden; /* Remove Scrollbar */
 }
+
+/* Scroll Container */
+scroll-container {
+  height: 320px; /* Fixed height for data rows */
+  overflow: hidden;
+  position: relative;
+}
+
+.scroll-content {
+  animation: scroll-up 10s linear infinite;
+  position: absolute;
+  width: 100%;
+}
+
+@keyframes scroll-up {
+  0% {
+    transform: translateY(0%);
+  }
+  100% {
+    transform: translateY(-50%);
+  }
+}
+
 
 /* Berthing Table */
 .berthing-table {
-  width: 120%; 
+  width: 100%;
   border-collapse: collapse;
-  text-align: left;
-  margin-left: -20px;
 }
-
 .berthing-table thead {
-  background-color: #6c63ff; 
-  color: #fff; 
+  background-color: #6c63ff;
+  color: #fff;
+  position: sticky;
+  top: 0; /* Keep header visible during scrolling */
 }
 
 .berthing-table th, .berthing-table td {
-  padding: 12px;
+  padding: 10px;
   border-bottom: 1px solid #ccc;
   text-align: center;
+  color: #fff;
 }
 
 .berthing-table tbody tr:nth-child(odd) {
